low-Re-plate-adv/adv_plate_edit/fail
qcc -autolink -DDISPLAY=-1 -O2 -fopenmp -lm -g -Wall -pipe -D_FORTIFY_SOURCE=2 -o adv_plate_edit/adv_plate_edit adv_plate_edit.c  -lm
In file included from adv_plate_edit.c:16:
/home/fpl/Software/basilisk/src/contact.h:12: warning: "interface_normal" redefined
   12 | #define interface_normal(point, c) interface_normal (point, c)
      | 
In file included from /home/fpl/Software/basilisk/src/draw.h:5,
                 from /home/fpl/Software/basilisk/src/view.h:426,
                 from /home/fpl/Software/basilisk/src/display.h:90,
                 from /home/fpl/Software/basilisk/src/utils.h:391,
                 from /home/fpl/Software/basilisk/src/run.h:11,
                 from /home/fpl/Software/basilisk/src/navier-stokes/centered.h:27,
                 from adv_plate_edit.c:13:
/home/fpl/Software/basilisk/src/fractions.h:29: note: this is the location of the previous definition
   29 | # define interface_normal(point, c) mycs (point, c)
      | 
adv_plate_edit.c: In function ‘init_1’:
adv_plate_edit.c:80:10: error: cannot convert to a pointer type
   80 |          f =(scalar *)(-y - exp(-x) - 0.005) ;
      |          ^
adv_plate_edit.c:80:13: error: incompatible types when assigning to type ‘scalar’ {aka ‘struct <anonymous>’} from type ‘scalar *’ {aka ‘struct <anonymous> *’}
   80 |          f =(scalar *)(-y - exp(-x) - 0.005) ;
      |             ^
make: *** [adv_plate_edit.s] Error 1
